# test-mcp

./: README.md  fastmcp.json  helpers.py  minimal-mcp.py  pyproject.toml  server.py  simple_ui.py  slides.md  test-mcp.py
test/: user_data.json
